# hom

./: pyproject.toml
facts/: commands.sty  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.tex  refs.bib  style.sty
facts/sections/: num_1.tex
src/: intro.py
